style.css
@font-face {
  font-family: "OpenSans";
    src: url("fonts/OpenSans/OpenSans-Regular.eot");
    src: url("fonts/OpenSans/OpenSans-Regular.woff2") format("embedded-opentype"),
        url("fonts/OpenSans/OpenSans-Regular.woff") format("woff2"),
        url("fonts/OpenSans/OpenSans-Regular.ttf") format("woff"),
        url("fonts/OpenSans/OpenSans-Regular.svg#svgFontName") format("svg");
}

@font-face {
  font-family: "PoppinsRegular";
    src: url("fonts/Poppins/Poppins-Regular.eot");
    src: url("fonts/Poppins/Poppins-Regular.woff2") format("embedded-opentype"),
        url("fonts/Poppins/Poppins-Regular.woff") format("woff2"),
        url("fonts/Poppins/Poppins-Regular.ttf") format("woff"),
        url("fonts/Poppins/Poppins-Regular.svg#svgFontName") format("svg");
}

@font-face {
  font-family: "PoppinsBold";
    src: url("fonts/Poppins/Poppins-Bold.eot");
    src: url("fonts/Poppins/Poppins-Bold.woff2") format("embedded-opentype"),
        url("fonts/Poppins/Poppins-Bold.woff") format("woff2"),
        url("fonts/Poppins/Poppins-Bold.ttf") format("woff"),
        url("fonts/Poppins/Poppins-Bold.svg#svgFontName") format("svg");
}

*{
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  /* font-family: 'ComfortaaRegular', monospace; */
  font-family: 'OpenSans', sans-serif; 
  font-weight: normal;
  font-style: normal; 
  font-size: 16px;
}

body {
  background-image: url(bilder/Background.png);
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100vh;
  overflow: hidden;
}

/* Header and Navigation Bar */

.logo img{
  color: white;
  max-height: 50px
}

nav{
display: flex;
position: fixed;
padding: 10px 20px;
width: 100%;
justify-content: space-between;
align-items: center;
min-height: 5vh;
z-index: 10;
}

.nav-links{
  position: absolute;
  height: 50vh;
  width: 15vw;
  top: 10vw;
  right: 0px;
  /* background-image: url(bilder/Background.png);
  background-size: cover; */
  background-color: #996dff;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transform: translateX(100%);
  transition: transform 0.3s;
  gap: 20px;
  overflow-x: hidden;
  border-radius: 10px 0 0 10px;
  box-shadow: 1px 1px #7B7A72;
}

.nav-active{
  transform: translateX(0%);
  overflow-x: visible;
}

.nav-links a{
  color: #f2f2f2;
  text-decoration: none;
  letter-spacing: 2px;
  font-weight: bold;
  padding: 10px;
}

.burger{
  display: block;
  cursor: pointer;
}

.burger div{
  width: 23px;
  height: 1px;
  background-color: #2A327A;
  margin: 5px;
  transition: all 0.3s ease;
}
a:hover {color: red}

.header-flex {
  display: flex;
  gap: 10px;
  color: #2A327A;
}

.main-content {
  padding-top: 50px;
}
@keyframes navLinkFade{
  from{
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

.toggle .line1{
  transform: rotate(-45deg) translate(-4px,4.6px);
}
.toggle .line2{
  opacity: 0;
}
.toggle .line3{
  transform: rotate(45deg) translate(-4px,-4.6px);
}

.seleteced_lang{
  cursor: pointer;
}

.lang_select_menu{
  display: flex;
  gap: 5px;
}

h2{
  margin-bottom: 0px;
  margin-top: 5px;
  font-size: 1em;
  font-weight: bold;
  margin-top: 10px;
}
/*  */
/* Main Page */
/*  */

.banner {
   background-image: url(bilder/2A.JPG);
   background-size: cover;
   padding: 10vw;
   margin-top: auto;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
   background-position: top center;
   text-align: left;
   color:  white;
   letter-spacing: 3px;
   font-weight: bold;
   font-size: 1.8em;

}

.faq-cnt{
  padding: 2vw 10vw;
  margin-top: 100px;
}

#hs_bild_1  {
 float: left;
 margin: 0 15px 15px 0;
 border-radius: 10px;
}

.derChat{
  background-image: url(bilder/11A.JPG);
  background-size: cover;
  padding: 10vw;
  background-repeat: no-repeat;
  background-position: top center;
  text-align: left;
  color:     white;
  letter-spacing: 2px;
  font-weight: bold;
  font-size: 1.5em;
}

/*  */
/* Footer */
/*  */

.footer-wrapper {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  max-height: 230px;
}

.footer {
  position: relative;
}

.footer-text-cnt {
  position: absolute;
  top: 40%;
  left: 40%;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.footer-svg {
  pointer-events: none;
}

.footer-text {
  font-size: 2.5em;
  color: white;
}

.footer-impressum {
  color: white;
}



/*  */
/*  */
/*  */

.ueber_uns_banner{
  background-image: url(bilder/21.JPG);
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  background-repeat: no-repeat;
  background-position: top center;
  text-align: left;
  color:     white;
  letter-spacing: 2px;
  font-weight: bold;
  font-size: 1.5em;
}

.prinzipien{
  background-color: white;
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  letter-spacing: 2px;
  color: #2f3669;
  font-weight: bold;
  font-size: 1.5em;
}

.geschichte{
  background-color: white;
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  letter-spacing: 2px;
  color: #2f3669;
  font-weight: bold;
  font-size: 1.5em;
}

#uu_bild{
  float: right;
  margin: 15px 15px 15px 0;
  border-radius: 10px;
}

.impressumbanner{
  background-image: url(bilder/8A.JPG);
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  background-repeat: no-repeat;
  background-position: top center;
  text-align: left;
  color:     white;
  letter-spacing: 2px;
  font-weight: bold;
  font-size: 1.5em;
}

.verantwortlich{
  background-color: white;
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  letter-spacing: 2px;
  color: #2f3669;
  font-weight: bold;
  font-size: 1.5em;
}


#imp_copyright{
  float: left;
  margin: 0 15px 0 0;
}

.copyright{
  background-color: white;
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  letter-spacing: 2px;
  color: #2f3669;
  font-weight: bold;
  font-size: 1.5em;
}


#imp_bild_1  {
 float: right;
 margin: 0 15px 15px 0;
 border-radius: 10px;
}


.datenschutzerklaerung_kurz{
  background-image: url(bilder/17A.JPG);
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  background-repeat: no-repeat;
  background-position: top center;
  text-align: left;
  letter-spacing: 2px;
  color: white;
  font-weight: bold;
  font-size: 1.5em;
}

.datenschutzerklaerung_lang{
  background-color: white;
  background-size: cover;
  padding: 10vw;
  margin-top: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  letter-spacing: 2px;
  color: #2f3669;
  font-weight: bold;
}

.backgroundStart{
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.centerField{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 250px;
}

.contactButton{
  display: none;
  justify-content: center;
  align-items: center;
  background-color: #FFD600;
  -webkit-transition: background-color 500ms linear;
  -ms-transition: background-color 5000ms linear;
  transition: background-color 500ms linear;
  min-height: 200px;
  min-width: 200px;
  border-radius: 500px;
  border: 0px;
  cursor: pointer;
}
.contactButton:hover{
  background-color: white;
    -webkit-transition: background-color 500ms linear;
    -ms-transition: background-color 5000ms linear;
    transition: background-color 500ms linear;
}


.contactText{
  color: #0B009B
}
.needToTalk{
  display: flex; 
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px;
  color: white;
}
.talk {
  font-family: 'PoppinsBold', sans-serif;
  font-size: 4em;
  text-align: center;
}
.students{
  font-size: 1em;
  text-align: center;
  padding: 5px;
}
.contactText{
  font-size: large;
  font-weight: bold;
}

.infoBox{
  background-color:rgba(255, 255, 255, 0.7);
  border-radius: 40px;
  width: 50vw;
  padding: 40px;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  text-decoration: none;
  min-width: 350px;
}
.active{
  display: flex;
}
.startButton{
  background-color: white;
    -webkit-transition: background-color 500ms linear;
    -ms-transition: background-color 5000ms linear;
    transition: background-color 500ms linear;
  border-radius: 40px;
  padding: 13px;
  margin: 6px;
  
}
.startButton:hover{
  background-color: #FFD600;
    -webkit-transition: background-color 500ms linear;
    -ms-transition: background-color 5000ms linear;
    transition: background-color 500ms linear;
    color: black;
}


/*  */
/* Mitmachen / Participate */
/*  */

.participate-cnt {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin-top: 100px;
}

.participate-text {
  width: 60%;
  color: #0400b5;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 20px;
  text-align: center;
}

.participate-text h1 {
  font-size: 2em;
  font-weight: bold;
}
.participate-text h2 {
  font-size: 1em;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 10px;
}


/*  */
/* Über Uns */
/*  */

.about-us-cnt {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin-top: 100px;
}

.about-us-text {
  height: 63vh;
  width: 60%;
  color: #0400b5;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 20px;
  text-align: center;
}

.about-us-text h1 {
  font-size: 2em;
  font-weight: bold;
}

.about-us-text h2 {
  font-size: 1em;
  font-weight: bold;
  margin-top: 10px;
}

/*  */
/* Impressum */
/*  */

.impressum-cnt {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin-top: 100px;
}

.impressum-text {
  width: 60%;
  height: 60vh;
  color: #0400b5;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 20px;
  text-align: center;
}

.impressum-text h1 {
  font-size: 2em;
  font-weight: bold;
}

.impressum-text h2 {
  font-size: 1.3em;
  font-weight: bold;
}

.imprint-flex {
  margin: 25px;
  text-align: start;
}


/*  */
/* Scroll */
/*  */

.scroll-cnt {
  overflow: scroll;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.scroll-cnt::-webkit-scrollbar {
  display: none;
}


/*  */
/* Responsive / Mobile */
/*  */

@media screen and (max-width:450px){
  .centerField{
    margin-bottom: 0px;
  }
  .footer-text-cnt {
    left: 27%;
  }
  
  .footer-text {
    font-size: 1.5em;
  }

  .footer-placeholder {
    width: 100%;
    height: 30px;
    background-color: #0400b5;
  }
  .talk{
    font-size: 35px;
  }

  .logo img{
    max-height: 30px
  }

  .nav-links{
    top: 40vw;
    width: 50vw;
  }

  .participate-text {
    height: 70vh;
    width: 75%;
    text-align: left;
  }

  .about-us-text {
    height: 70vh;
    width: 75%;
    text-align: left;
  }

  .impressum-text {
    height: 70vh;
    width: 75%;
    text-align: left;
  }
}
.accordion{
  margin-bottom: 100px;
}
.faq-cnt{
  overflow-x: scroll;
}

